basic-auth/example-idp-service/k8s/03-route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: basic-auth-server
  labels:
    app: basic-auth-server
spec:
  to:
    kind: Service
    name: basic-auth-server
    weight: 100
  port:
    targetPort: basic-auth-server
  tls:
    termination: reencrypt
  wildcardPolicy: None
